--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -3,7 +3,7 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/navigation"
-            app:startDestination="@id/splashScreenFragment">
+            app:startDestination="@id/tvShowsFragment">
 
     <fragment android:id="@+id/loginFragment"
               android:name="com.example.jetpack.ui.LoginFragment"
@@ -11,4 +11,19 @@
               tools:layout="@layout/fragment_login"/>
     <fragment android:id="@+id/splashScreenFragment" android:name="com.example.jetpack.ui.splashscreen.SplashScreenFragment"
               android:label="fragment_splash_screen" tools:layout="@layout/fragment_splash_screen"/>
+    <fragment
+        android:id="@+id/homeFragment"
+        android:name="com.example.jetpack.ui.home.HomeFragment"
+        android:label="fragment_home"
+        tools:layout="@layout/fragment_home" />
+    <fragment
+        android:id="@+id/moviesFragment"
+        android:name="com.example.jetpack.ui.movies.MoviesFragment"
+        android:label="fragment_movies"
+        tools:layout="@layout/fragment_movies" />
+    <fragment
+        android:id="@+id/tvShowsFragment"
+        android:name="com.example.jetpack.ui.tvshows.TvShowsFragment"
+        android:label="fragment_tv_shows"
+        tools:layout="@layout/fragment_tv_shows" />
 </navigation>
