--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,9 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="AppTheme.Text.Title" parent="Widget.MaterialComponents.TextView">
+        <item name="android:textSize">14dp</item>
+        <item name="android:textColor">@color/blue_300</item>
+        <item name="android:textStyle">bold</item>
+    </style>
 </resources>
