Add unit testing

--- a/app/src/main/res/layout/rv_item_tv_shows.xml
+++ b/app/src/main/res/layout/rv_item_tv_shows.xml
@@ -17,7 +17,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
+            android:layout_marginTop="4dp"
             android:layout_marginEnd="4dp"
+            android:layout_marginBottom="4dp"
             android:elevation="4dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -108,8 +110,8 @@
                     android:layout_height="0dp"
                     android:layout_marginTop="4dp"
                     android:layout_marginEnd="16dp"
-                    android:text="@{movies.overview}"
                     android:maxLines="2"
+                    android:text="@{movies.overview}"
                     app:layout_constraintBottom_toBottomOf="@+id/ivPosterMovies"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/tvPreview"
