--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -47,7 +47,7 @@
     <color name="orange_700">#F57C00</color>
 
     <color name="blue_100">#6AECF4</color>
-
+    <color name="blue_700">#EB6B8EF6</color>
 
 </resources>
 
