--- a/app/src/main/res/layout/item_movies.xml
+++ b/app/src/main/res/layout/item_movies.xml
@@ -4,11 +4,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:background="@color/Black"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <ImageView
             android:id="@+id/ivImageMovies"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="230dp"
             android:adjustViewBounds="true"
             android:scaleType="fitCenter"
