--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -8,16 +8,19 @@
         android:title="Home"
         app:showAsAction="ifRoom"
         />
-
+    <item
+        android:id="@+id/favoriteFragment"
+        android:icon="@drawable/ic_rate"
+        android:title="Rak Film"
+        app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/popularMoviesFragment"
-        android:icon="@drawable/ic_favorite"
+        android:icon="@drawable/ic_unfavorite"
         android:title="favorite"
         app:showAsAction="ifRoom"/>
-
     <item
         android:id="@+id/topRatedMoviesFragment"
-        android:icon="@drawable/ic_ranking"
+        android:icon="@drawable/ic_unselected"
         android:title="Ranking"
         app:showAsAction="ifRoom"/>
     <item
@@ -25,8 +28,4 @@
         android:icon="@drawable/ic_profile"
         android:title="Profile"
         app:showAsAction="ifRoom"/>
-
-
-
-
 </menu>
