--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,7 +14,7 @@
 
     <style name="AppTheme.Text.Title" parent="Widget.MaterialComponents.TextView">
         <item name="android:textSize">16sp</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/Black</item>
         <item name="android:textStyle">bold</item>
     </style>
 
