--- a/app/src/main/res/drawable-v24/button_round.xml
+++ b/app/src/main/res/drawable-v24/button_round.xml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:shape="oval">
+       >
 
-    <solid
-            android:color="@color/badge_count"
-        />
+    <stroke
+        android:width="1dp"
+        android:color="@color/red_300" />
 
+    <solid android:color="@color/white" />
 
-    <size
-            android:width="70dp"
-            android:height="70dp"/>
+    <padding
+        android:left="2dp"
+        android:right="2dp"
+        android:bottom="2dp"
+        android:top="2dp" />
+
+    <corners android:radius="20dp" />
 </shape>
