--- a/app/src/main/res/layout/fragment_detail_movies.xml
+++ b/app/src/main/res/layout/fragment_detail_movies.xml
@@ -139,12 +139,15 @@
                         app:layout_constraintStart_toStartOf="@+id/textView28"
                         app:layout_constraintTop_toBottomOf="@+id/textView28" />
 
-                    <androidx.recyclerview.widget.RecyclerView
+                    <com.example.jetpack.ui.detailmovies.HorizontalCarouselRecyclerView
                         android:id="@+id/rvCompany"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="16dp"
                         android:orientation="horizontal"
+                        android:layout_gravity="center_vertical"
+                        android:clipToPadding="false"
+                        android:overScrollMode="never"
                         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
