--- a/app/src/main/res/layout/rv_item_production_company.xml
+++ b/app/src/main/res/layout/rv_item_production_company.xml
@@ -14,11 +14,11 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView5"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="16dp"
             app:cardCornerRadius="20dp"
             app:cardElevation="10dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -30,9 +30,10 @@
                 android:layout_height="match_parent">
 
                 <ImageView
+                    android:id="@+id/ivCompanyLogo"
+                    imageFromUrl="@{data.logo_path}"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    imageFromUrl="@{data.logo_path}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -41,7 +42,7 @@
         </androidx.cardview.widget.CardView>
 
         <TextView
-            android:id="@+id/textView29"
+            android:id="@+id/tvCompanty"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
