--- a/app/src/main/res/layout/fragment_detail_movies.xml
+++ b/app/src/main/res/layout/fragment_detail_movies.xml
@@ -17,7 +17,6 @@
             type="Boolean" />
     </data>
 
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -123,6 +122,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="24dp"
                         android:text="@{vm.viewers}"
+                        android:textSize="16sp"
                         app:layout_constraintStart_toStartOf="@+id/textView26"
                         app:layout_constraintTop_toBottomOf="@+id/textView26" />
 
@@ -131,8 +131,10 @@
                         android:layout_width="0dp"
                         android:layout_height="0dp"
                         android:layout_marginTop="16dp"
+                        android:fontFamily="@font/roboto_light"
                         android:layout_marginEnd="32dp"
                         android:layout_marginBottom="16dp"
+                        android:textSize="16sp"
                         android:text="@{vm.movies.overview}"
                         app:layout_constraintBottom_toTopOf="@+id/textView5"
                         app:layout_constraintEnd_toEndOf="parent"
