--- a/app/src/main/res/layout/rv_item_favorite.xml
+++ b/app/src/main/res/layout/rv_item_favorite.xml
@@ -94,7 +94,7 @@
                     android:layout_height="33dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginBottom="8dp"
-                    android:background="@drawable/button_round"
+                    android:background="?attr/materialButtonStyle"
                     android:text="@{movies.genre}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/textView30"
